# entofile

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  ISA.md  README.md  REVIEW.md  SECURITY.md  TODO.md  domain_profile.yaml  entofile.md  experiment_plan.yaml  pyproject.toml  run.sh  tasks.yaml
.github/: CODEOWNERS
configs/: benchmark_expanded.yaml
data/: AGENTS.md  README.md  claim_ledger.yaml  ento_manifest_schema.json  ento_track_header.ksy
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  benchmark_profiles.md  claim_ledger.md  entofile-threat-model.md  evidence_provenance.md  faq.md  figure_registry.md  format_0_5_0.md  format_migration.md  glossary.md  kms_hsm_profile.md  manifest_extension_policy.md  methods.md  nation_state_roadmap.md  operator_checklist.md  output_conventions.md  output_inventory.md  pq_transition_note.md  provenance_signing.md  public_ci_dry_run.md  public_release_checklist.md  publication_checklist.md  quickstart.md  redteam_claim_scholarship_audit_0.4.md  redteam_publish_0.4.md  redteam_publish_0.5.md  redteam_publish_1.0.md  redteam_repo_visual_audit_0.4.md  release_notes_template.md  rendering_pipeline.md  security.md  streaming_design.md  style_guide.md  syntax_guide.md  testing_philosophy.md  troubleshooting.md
manuscript/: 00_abstract.md  01_introduction.md  02_methodology.md  02a_ontology_and_fixtures.md  02b_proof_and_observability.md  02c_security_verification.md  02d_formal_model.md  03_results.md  03a_benchmark_interpretation.md  04_conclusion.md  05_experimental_setup.md  06_reproducibility.md  07_scope_and_related_work.md  08_limitations_and_threat_model.md  99_references.md  AGENTS.md  README.md  SYNTAX.md  config.yaml  preamble.md  references.bib
scripts/: 00_preflight.py  AGENTS.md  README.md  audit_publication_readiness.py  build_dashboard.py  build_release_bundle.py  check_figure_layout.py  check_public_promotion_metadata.py  ento_analysis.py  ento_cli.py  export_sbom.py  generate_api_docs.py  generate_conformance_fixtures.py  generate_manuscript_variables_standalone.py  run_benchmark_profile.py  run_tests.py  verify_conformance_fixtures.py  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  __init__.py  __main__.py  analysis.py  artifact_manifest.py  benchmark_io.py  (+40 more)
(+100 files in other folders)
