[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entofile"
version = "0.4.0"
description = "ENTO format 0.4.0 authenticated omnitrack research containers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Ari Friedman", email = "daniel@activeinference.institute" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "cryptography>=48.0.0",
    "qrcode[pil]>=8.0",
    "python-barcode>=0.15.1",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.6.0",
    "types-PyYAML",
    "types-jsonschema",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",
    "UP017",  # timezone.utc is correct for Python 3.10 compat
    "UP036",  # version block for tomllib compat is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
# The reproducible "mypy clean" gate: `uv run --extra dev mypy src/`.
# Stub packages (types-PyYAML, types-jsonschema) ship in the dev extra so a
# stub-less invocation cannot silently shrink the checked surface.
python_version = "3.10"
files = ["src"]
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["qrcode", "qrcode.*", "barcode", "barcode.*", "infrastructure.*", "tomli", "tomllib"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py", "*/test_*.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv]
